# bert-clf

./: Dockerfile  Makefile  pyproject.toml  train.py
