[tool.poetry]
name = "bert-clf"
version = "0.1.0"
description = ""
authors = ["Jun Harashima"]
readme = "README.md"
packages = [{include = "bert_clf"}]

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.30.2"
datasets = "^2.13.1"
torch = "^2.0.1"
torcheval = "^0.0.6"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
mlflow = "^2.4.2"
peft = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pysen = "^0.10.4"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"
black = "^23.7.0"

[tool.poetry.group.bert.dependencies]
fugashi = "^1.2.1"
unidic-lite = "^1.0.8"

[tool.poetry.group.roberta.dependencies]
protobuf = "^4.23.4"
sentencepiece = "^0.1.99"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
